<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ThirdFragment"
             tools:background="@android:color/transparent">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="@string/btn_back_fragment"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:id="@+id/btn_fg3_back"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
                android:text="@string/btn_begin_fragment"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:id="@+id/btn_fg3_begin"
                style="@style/Widget.AppCompat.Button.Colored"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline2"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText_fr3_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_fg3_back"
                tools:text="Type something"
                android:maxLength="20"
                android:textColor="@android:color/white"/>

        <TextView
                android:text="@string/txt_some_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/editText_fr3_text"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/editText_fr3_text"
                app:layout_constraintEnd_toEndOf="@+id/editText_fr3_text"
                android:textColor="@android:color/white"/>

        <TextView
                android:text="@string/txt_third_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>