<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimaryDark"
             tools:context=".SecondFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="@string/btn_back_fragment"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:id="@+id/btn_fg2_back"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
                android:text="@string/btn_next_fragment"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:id="@+id/btn_fg2_next"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:text="@string/txt_second_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/btn_fg2_back"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>